# alfalfa-client

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.MD  CHANGELOG.rst  CHANGES.txt  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml  documentation.yml  integration.yml
alfalfa-client/: __init__.py  alfalfa_client.py  historian.py
alfalfa_client/: __init__.py  alfalfa_client.py  historian.py  lib.py  query_constructor.py
alfalfa_client/lib/: utils.py
alfalfaclient/: __init__.py  alfalfaclient.py
client/: __init__.py  alfalfaclient.py
docs/: conf.py  index.rst
tests/: conftest.py  test_alfalfa_client.py  test_lib.py  test_version.py
tests/integration/: conftest.py  test_api.py  test_single_model.py  test_small_office.py
