[tool.poetry]
name = "alfalfa-client"
version = "0.4.0"
description = "A standalone client for the NREL Alfalfa application"
authors = [
    'Kyle Benne <kyle.benne@nrel.gov>',
    'Brian Ball <brian.ball@nrel.gov>',
    'Cory Mosiman <cory.mosiman@nrel.gov>',
    'Nicholas Long <nicholas.long@nrel.gov>',
    'Willy Bernal <willy.bernalheredia@nrel.gov>',
    'Yanfei Li <yanfei.li@nrel.gov>',
    'Tobias Shapinsky <tobias.shapinsky@nrel.gov>'
]
readme = 'README.md'
license = 'LICENSE.txt'

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
pandas = "~1.3.5"
requests-toolbelt = "0.9.1"
importlib-metadata = "^4.11.4"
hszinc = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.21.4"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
