[tool.poetry]
name = "alfalfa-client"
version = "0.7.0"
description = "A standalone client for the NREL Alfalfa application"
authors = [
    'Kyle Benne <kyle.benne@nrel.gov>',
    'Brian Ball <brian.ball@nrel.gov>',
    'Cory Mosiman <cory.mosiman@nrel.gov>',
    'Nicholas Long <nicholas.long@nrel.gov>',
    'Willy Bernal <willy.bernalheredia@nrel.gov>',
    'Yanfei Li <yanfei.li@nrel.gov>',
    'Tobias Shapinsky <tobias.shapinsky@nrel.gov>'
]
readme = 'README.md'
license = 'LICENSE.txt'

[tool.poetry.dependencies]
python = ">=3.8"

requests-toolbelt = "~1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
sphinx = "^6.1.3"
pre-commit = "~2.21"
pytest = "~7.2"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
